# fastapi-dramatiq-redis

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  docker-compose.yml  entrypoint.sh  locustfile.py  pyproject.toml  requirements.txt
fastapi-dramatiq-redis/: models.py  settings.py
fastapi-dramatiq-redis/api/: app.py
fastapi-dramatiq-redis/worker/: app.py
src/: models.py
src/api/: app.py
src/worker/: app.py
